makes quiz height adjustable to prevent the dots from showing up behind the questions

--- a/src/app/components/quizz/quizz.component.scss
+++ b/src/app/components/quizz/quizz.component.scss
@@ -1,14 +1,11 @@
 .quizz-component {
-    
     height: 100%;
-    .question {
-        height: 93%;
-    }
     .dots {
-        height: 7%;
+        padding: 0.5rem 0;
         p {
             width: 100%;
             text-align: center;
+            margin-bottom: 0;
             >i {
                 font-size: 1.4rem;
                 margin: 0 .5rem;
